# ame-alanya.com

./: .gitignore  app.py  package-lock.json  package.json  pyproject.toml  replit.md  requirements.txt  users.json
attached_assets/: 2025_-_20263_Hız_yayınları_5._Sınıf_Türkiye_Geneli_KDS_1_1768990010853.xlsx  2025_-_20263_Hız_yayınları_5._Sınıf_Türkiye_Geneli_KDS_1_1769196036127.xlsx  2025_-_2026_Hız_yayınları_6._Sınıf_Türkiye_Geneli_KDS_1_1769027739715.xlsx  2025_-_2026_Hız_yayınları_7._Sınıf_Türkiye_Geneli_KDS_1_1769199980893.xlsx  2025_-_2026_Hız_yayınları_8._Sınıf_Türkiye_Geneli_KDS_1_1769199980893.xlsx  5_Sinif_Sonuc_(1)_1769249398826.csv  5_Sinif_Sonuc_(3)_1769250561553.csv  5_Sinif_Sonuc_(4)_1769251152199.csv  5_Sinif_Sonuc_(7)_1769252996004.csv  768146-5_1768987186144.txt  768146-6_1769027393561.txt  768146-7_1768987186147.txt  768146-8_1768987186147.txt  AMEO_DUZELTILMIS.aia  AMEO_TEMIZ (1)_1764533762836.aia  AMEO_TEMIZ (1)_1764606843792.aia  AMEO_TEMIZ.aia  AMEO_TEMIZ_1764609954372.aia  DEĞERLENDİRME_-_2-7._SINIF_AY_SERİSİ_DEĞERLENDİRME_-_2__1765045422469.xls  DEĞERLENDİRME_-_2-8._SINIF_AY_SERİSİ_DEĞERLENDİRME_-_2__1765045422470.xls  Pasted-Kodular-is-unable-to-compile-this-project-The-compiler-error-output-was-ReadBuildInfo-Starting--1764497637542_1764497637543.txt  Pasted-Kurum-Kodu-Telefon-Ogrenci-No-Oturum-Kitapcik-Ad-Soyad-_1769195141842.txt  Pasted-host-https-acrobat-adobe-com-renderingWorker-we-5b9720b_1764770954842.txt  Pasted-import-pandas-as-pd-def-optik-veriyi-isle-input-file-ou_1769248645769.txt  TÜM_OKUL_LİSTE_1765014587529.XLS  (+12 more)
(+107 files in other folders)
